--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <h1>Tech Blog</h1>
       <nav>
         <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="html.html">HTML</a></li>
           <li><a href="css.html">CSS</a></li>
         </ul>
