--- a/html.html
+++ b/html.html
@@ -6,8 +6,9 @@
   <body>
     <header>
       <h1>Tech Blog</h1>
-      <nav>
-        <ul>
+      <nav class="primary-nav">
+        <div>
+        <ul class="primary-nav__list">
           <li><a href="index.html">Home</a></li>
           <li><a href="html.html">HTML</a></li>
           <li><a href="css.html">CSS</a></li>
