--- a/html.html
+++ b/html.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>HTML</title>
-    <link href="styleindex.css" rel="stylesheet"/>
+    <link href="stylehtml.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
