--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <body>
     <header>
       <h1>Tech Blog</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="html.html">HTML</a></li>
-          <li><a href="css.html">CSS</a></li>
+      <div class="site-header">
+      <nav class="primary-nav">
+        <ul class="primary-nav__list">>
+          <li><a href="index.html" class="primary-nav__link">Home</a></li>
+          <li><a href="html.html" class="primary-nav__link">HTML</a></li>
+          <li><a href="css.html" class="primary-nav__link">CSS</a></li>
         </ul>
       </nav>
     </header>
