--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>Tech Blog</h1>
       <div class="site-header">
       <nav class="primary-nav">
-        <ul class="primary-nav__list">>
+        <ul class="primary-nav__list">
           <li><a href="index.html" class="primary-nav__link">Home</a></li>
           <li><a href="html.html" class="primary-nav__link">HTML</a></li>
           <li><a href="css.html" class="primary-nav__link">CSS</a></li>
