--- a/csslayouts.html
+++ b/csslayouts.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HTML</title>
+  </head>
+  <body>
+    <header>
+      <h1>Tech Blog</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="html.html">HTML</a></li>
+          <li><a href="css.html">CSS</a></li>
+          <li><a href="csslayouts.html">CSS Layouts</a></li>
+        </ul>
+      </nav>
+    </header>
+    <article>
