--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tech Blog</title>
-    <link href="stylehome.css" rel="stylesheet"/>
+    <title>HTML</title>
   </head>
   <body>
     <header>
-      <h1>     Tech Blog</h1>
-      <div class="site-header">
-      <nav class="primary-nav">
-        <ul class="primary-nav__list">
-          <li><a href="index.html" class="primary-nav__link">Home</a></li>
-          <li><a href="html.html" class="primary-nav__link">HTML</a></li>
-          <li><a href="css.html" class="primary-nav__link">CSS</a></li>
+      <h1>Tech Blog</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="html.html">HTML</a></li>
+          <li><a href="css.html">CSS</a></li>
+          <li><a href="csslayouts.html">CSS Layouts</a></li>
         </ul>
       </nav>
     </header>
     <article>
+
       <p>Welcome to my blog</p>
     </article>
     <footer>
