--- a/html.html
+++ b/html.html
@@ -2,21 +2,21 @@
 <html>
   <head>
     <title>HTML</title>
-    <link href="stylehtml.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
       <h1>Tech Blog</h1>
-      <nav class="primary-nav">
-        <div>
-        <ul class="primary-nav__list">
+      <nav>
+        <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="html.html">HTML</a></li>
           <li><a href="css.html">CSS</a></li>
+          <li><a href="csslayouts.html">CSS Layouts</a></li>
         </ul>
       </nav>
     </header>
     <article>
+
       
       <h1>HTML</h1>
       
