--- a/csslayouts.html
+++ b/csslayouts.html
@@ -16,3 +16,10 @@
       </nav>
     </header>
     <article>
+
+   </article>
+    <footer>
+    <p>&copy; 2021 Mohammed Abdulmahdi</p>
+    </footer>
+  </body>
+</html>
