--- a/html.html
+++ b/html.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <title>HTML</title>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
-      <h1>Tech Blog</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="html.html">HTML</a></li>
-          <li><a href="css.html">CSS</a></li>
-          <li><a href="csslayouts.html">CSS Layouts</a></li>
+      
+      <h1><pre> Tech Blog</h1></pre>
+      
+      <div class="site-header">
+      <nav class="primary-nav">
+        <ul class="primary-nav__list">
+          <li><a href="index.html" class="primary-nav__link">Home</a></li>
+          <li><a href="html.html" class="primary-nav__link">HTML</a></li>
+          <li><a href="css.html" class="primary-nav__link">CSS</a></li>
+          <li><a href="csslayouts.html" class="primary-nav__link">CSS Layouts</a></li>
         </ul>
       </nav>
     </header>
