--- a/csslayouts.html
+++ b/csslayouts.html
@@ -23,7 +23,7 @@
       
       <h1>CSS Layouts</h1>
       
-      <h2>Single Column/h2>
+      <h2>Single Column</h2>
       <!--- Codepen Snippet --->
       <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="abyKLNp" data-user="captain-absol" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"><span>See the Pen <a href="https://codepen.io/captain-absol/pen/abyKLNp">
       Single-column</a> by Captain-Absol (<a href="https://codepen.io/captain-absol">@captain-absol</a>)on <a href="https://codepen.io">CodePen</a>.</span></p><script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
