--- a/css.html
+++ b/css.html
@@ -16,6 +16,7 @@
           <li><a href="html.html" class="primary-nav__link">HTML</a></li>
           <li><a href="css.html" class="primary-nav__link">CSS</a></li>
           <li><a href="csslayouts.html" class="primary-nav__link">CSS Layouts</a></li>
+          <li><a href="js.html" class="primary-nav__link">JavaScript</a></li>
         </ul>
       </nav>
     </header>
