--- a/js.html
+++ b/js.html
@@ -25,7 +25,11 @@
       <h1>JavaScript</h1>
       
       <h2>JS Intro</h2>
+      <!--- Codepen Snippet --->
+      <p class="codepen" data-height="300" data-default-tab="js,result" data-slug-hash="GRvaReN" data-user="captain-absol" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"><span>See the Pen <a href="https://codepen.io/captain-absol/pen/GRvaReN">
+      JS Intro</a> by Captain-Absol (<a href="https://codepen.io/captain-absol">@captain-absol</a>)on <a href="https://codepen.io">CodePen</a>.</span></p><script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       
+      <p> JavaScript lets us write into the console directly and with the use of variables we can even tell it do to certain types of math or write things through code.
     </article>
     <footer>
     <p>&copy; 2021 Mohammed Abdulmahdi</p>
