--- a/css.html
+++ b/css.html
@@ -45,7 +45,7 @@
                  
                  <h3>Internal or Embedded CSS</h3>
                  <!--- Codepen Snippet --->
-                 <<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="NWvBNmK" data-user="captain-absol" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"><span>See the Pen <a href="https://codepen.io/captain-absol/pen/NWvBNmK">
+                 <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="NWvBNmK" data-user="captain-absol" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"><span>See the Pen <a href="https://codepen.io/captain-absol/pen/NWvBNmK">
                  Internal or Embedded CSS</a> by Captain-Absol (<a href="https://codepen.io/captain-absol">@captain-absol</a>) on <a href="https://codepen.io">CodePen</a>.</span></p><script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       
                  <p> This can be used when a single HTML document must be styled uniquely. The CSS rule set should be within the HTML file in the head section i.e the CSS is embedded within the HTML file.</p>
