--- a/html.html
+++ b/html.html
@@ -65,7 +65,7 @@
       <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="JjyBKKv" data-user="captain-absol" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;"><span>See the Pen <a href="https://codepen.io/captain-absol/pen/JjyBKKv">
       Semantic Group Tags</a> by Captain-Absol (<a href="https://codepen.io/captain-absol">@captain-absol</a>)on <a href="https://codepen.io">CodePen</a>.</span></p><script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       
-      <p> These <strong>semantic group tags</strong>  can be nested in a variety of ways. Whenever using a group tag (<div> or <span>), ask yourself, “Is there a <strong>semantic</strong> tag I could use instead?”</p>
+      <p> These <strong>semantic group tags</strong> can be nested in a variety of ways. Whenever using a group tag (div or span), ask yourself, “Is there a <strong>semantic</strong> tag I could use instead?”</p>
     </article>
     <footer>
     <p>&copy; 2021 Mohammed Abdulmahdi</p>
